# pyvista-mypy-plugin

./: README.md  pyproject.toml
pyvista_mypy_plugin/: __init__.py  mypy_plugin.py
tests/: mypy.ini  test_dataobject_type_promotion.yaml  test_dataset_type_promotion.yaml  test_pointset_type_promotion.yaml  test_runtime.py  test_static.yaml
